<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Been There,Done That!</string>
    <string name="menu_settings">Settings</string>
    <string name="help">Help</string>
	<string name="settings">设置</string>
	<string name="scores">Scores Screen</string>
	<string name="game">Game Screen</string>
	
	<string name="app_logo_top">BEEN THERE</string>
	<string name="app_logo_bottom">DONE THAT!</string>
	<string name="app_version_info">Version 2.0.0\nCopyright @2012 GuanMac\nAll Rights Reserved.</string>
	
	<string name="menu">MAIN MENU</string>
	<string name="menu_item_settings">设置</string>
	<string name="menu_item_play">开始游戏</string>
	<string name="menu_item_scores">得分榜</string>
	<string name="menu_item_help">帮助</string>	
	
	<string name="all_scores">所有得分</string>
	<string name="friends_scores">朋友得分</string>
	<string name="no_scores">没有得分</string>
	<string name="username">用户名</string>
	<string name="rank">等级</string>
	<string name="score">得分</string>
	<string name="wait_msg">Retrieving Scores...</string>
	<string name="wait_title">Loading....</string>
	
	<string name="nickname">用户昵称</string>
	<string name="email">Email</string>
	<string name="password">密码</string>
	<string name="password2">确认密码</string>
	<string name="button_pwd">设置密码</string>
	<string name="pwd_set">已设密码</string>
	<string name="pwd_not_set">未设密码</string>
	<string name="pwd_equal">Passwords match</string>
	<string name="pwd_not_equal">Passwords do not match .please try again</string>
	
	<string name="dob">Birth Date</string>
	<string name="dob_not_set">未设置出生日期</string>
	<string name="button_dob">设置日期</string>
	
	<string name="gender">性别</string>
	<string name="gender_male">男</string>
	<string name="gender_female">女</string>
	<string name="gender_neutral">保密</string>

	<string name="yes">是</string>
	<string name="no">否</string>
	<string name="no_questions">No more questions available. Try back later.</string>

	<string name="settings_favoriteplace">Favorite Place:</string>
	<string name="settings_button_favoriteplace">Pick a Place</string>
	<string name="settings_favoriteplace_not_set">No Favorite Plae</string>
	<string name="settings_favoriteplace_coords">Coordinates:</string>
	<string name="settings_favoriteplace_currentlocation">(Current Location)</string>
	<string name="settings_button_favplace_map">Map it!</string>
	
	<string name="settings_friend_email">Enter email address of friend:</string>
	<string name="settings_friend_email_label">Friends</string>
	<string name="settings_friend_email_tip">Add a new friend by email</string>
	<string name="settings_button_friend_email">Add Friend</string>
</resources>

















