<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="@dimen/help_text_size"
       android:textStyle="bold"
       android:text="@string/settings_favoriteplace" />
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText 
            android:id="@+id/EditText_FavPlaceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="输入最喜欢的地方"
            android:maxLines="1"
            android:inputType="text"
            android:width="@dimen/fav_place_textbox_size"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/Button_MapIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/EditText_FavPlaceName"
            android:text="@string/settings_button_favplace_map" />

"
    </RelativeLayout>

	<TextView
	    android:text="@string/settings_favoriteplace_coords"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="@dimen/help_text_size"
        android:textStyle="bold" />
	<TextView
	    android:id="@+id/TextView_FavPlaceCoords_Info"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:textSize="@dimen/help_text_size"
        android:textStyle="bold" />

</LinearLayout>