<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
     >

    <TextView
        android:id="@+id/TextViewTopTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_logo_top"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size"
        android:gravity="top|center" />

     <TableLayout 
         android:id="@+id/TableLayout01"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:stretchColumns="*">
         <TableRow 
             android:id="@+id/TableRow01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <ImageView 
                 android:id="@+id/ImageView2_Left"
                 android:src="@drawable/splash1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"></ImageView>
             <ImageView
                 android:id="@+id/ImageView2_Right"
                 android:src="@drawable/splash2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"></ImageView>
         </TableRow>
         <TableRow 
             android:id="@+id/TableRow02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <ImageView 
                 android:id="@+id/ImageView3_Left"
                 android:src="@drawable/splash3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center_horizontal"></ImageView>
             <ImageView
                 android:id="@+id/ImageView3_Right"
                 android:src="@drawable/splash4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"></ImageView>
         </TableRow>
     </TableLayout>"
    
    <TextView
        android:id="@+id/TextViewBottomTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_logo_bottom"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size"
        android:gravity="top|center"></TextView>
    
    <TextView
        android:id="@+id/TextViewBottomVersion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/app_version_info"
        android:textColor="@color/version_color"
        android:background="@color/version_bkgrd"
        android:lineSpacingExtra="@dimen/version_spacing"
        android:textSize="@dimen/version_size"
        android:gravity="center"></TextView>
</LinearLayout>